# poc-cli-translations

./: .gitignore  Makefile  README.md  stk.yaml
src/: pyproject.toml
src/poc_cli_translations/: __init__.py  cli.py
src/poc_cli_translations/commands/config/: __init__.py  lang.py
src/poc_cli_translations/commands/say/: __init__.py  hello.py
src/poc_cli_translations/core/: message.py
src/poc_cli_translations/core/translations/: stk.en.json  stk.fr.json  stk.pt.json
src/tests/: test_poc_cli_translations.py  test_say_hello.py
